added more to the body

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Alex Simon</title>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!-- Custom CSS -->
@@ -58,12 +60,32 @@
 		</div>
 	</div>
 
+	<div class="container">
+  		<div class="jumbotron">
+  		<img src="favicon.ico">    
+    	</div>
+    </div>
 
+    <div class="container">
+    	<div class="row">
+    		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+    			<h3>About</h3>
+    			<p>I am a 25 year old who lives with his dog. I work full time and enjoy the outdoors. I am in to anything tech related and love to tinker. I travel a lot and enjoy seeing new and interesting places. I have recently started to get my web skills up and learn new programming languages. I made this website as a project and am currently hosting it on a raspberry pi.</p>
+    		</div>
+    		<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+    			<h3>Interests</h3>
+    			<p>I love Star Wars and collect just about anything I can get my hands on. I like camping and hiking and going to the beach. I also like to relax at home just watching TV. I enjoy playing video games online or board games IRL with friends. I really want to get into making websites and coding different projects. If you want to know more, click to download my resume or contact me.</p>
+    		</div>
+    	</div>
+    </div>
+    <footer class="footer">
+      <div class="container">
+        <span class="text-muted">&copy; Alex Simon 2018</span>
+      </div>
+    </footer>
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="validator.js"></script>
-    <script src="contact.js"></script>
 </body>
 </html>
